# siesta-framework

./: .gitignore  .gitmodules  LICENSE  README.md  config.example.json  docker-compose.yml  experiment.py  install_dependencies.py  main-full.py  main.py  parse_seql.py  pyproject.toml
config/: adaptive_index.config.json  (+8 more)
siesta_framework/: config.example.json  docker-compose.yml  groundtruth_1772104082.764736.csv  main.py  pyproject.toml
siesta_framework/api/: requirements.txt  router.py
siesta_framework/config/: mining.config.json  preprocess.config.json  siesta.config.json
siesta_framework/core/: app.py  config.py  interfaces.py  logger.py  requirements.txt  sparkManager.py  storageFactory.py  storageManagerFactory.py
siesta_framework/datasets/: test.csv  test.xes  test_nopos.csv  test_nopos_2.csv
siesta_framework/dockerbase/Kafka/: Kafka.dockerfile  entrypoint.sh
siesta_framework/dockerbase/Spark/: Spark.dockerfile  log4j2.properties
siesta_framework/model/: DataModel.py  StorageModel.py  SystemModel.py
siesta_framework/modules/Compare/: dm.py  main.py  ngrams.py  ngrams_network.py
siesta_framework/modules/Example/: main.py
siesta_framework/modules/Mining/: existential.py  main.py  negations.py  ordered.py  positional.py  unordered.py
siesta_framework/modules/Preprocess/: builders.py  computations.py  extractPairs.py  main.py  parse_log.py  parsers.py  requirements.txt
siesta_framework/modules/Query/: CEP_adapter.py  CEP_adapter2.py  CEP_adapter_helpers.py  exploration.py  main.py  parse_seql.py  query_processors.py  query_processors_detection.py
siesta_framework/modules/Query/CEP/: CEP_adapter.py
siesta_framework/modules/Query/OpenCEP/base/: PatternStructure.py
siesta_framework/modules/Query/processors/: detection_query.py  exploration_query.py  stats_query.py
siesta_framework/modules/SparkManager/: main.py
siesta_framework/modules/example/: main.py
siesta_framework/modules/preprocess_example/: main.py
siesta_framework/scripts/: install_dependencies.py  kafka_consumer.py  kafka_producer.py
siesta_framework/storage/S3/: S3Manager.py  requirements.txt
(+132 files in other folders)
