[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "siesta-framework"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pm4py",  # example dependency
]

# --- 1. Strict Typing (MyPy) ---
[tool.mypy]
strict = true
ignore_missing_imports = false
disallow_untyped_defs = true

# --- 2. Strict Linting & Docstrings (Ruff) ---
# Ruff replaces Flake8, Isort, and Pydocstyle. It is incredibly fast.
[tool.ruff]
select = ["E", "F", "I", "D"] # D = pydocstyle (docstrings)
ignore = ["D100", "D104"] # Ignore missing docs in __init__.py files if you want

[tool.ruff.pydocstyle]
convention = "google" # Enforces Google-style docstrings

# --- 3. Testing (Pytest) ---
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=core"
testpaths = ["tests"]